--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,8 +1,8 @@
 * {
-  background-color: black;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 body {
@@ -29,7 +29,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
-  transition: background-color .08s ease;
+  transition: background-color 0.08s ease;
 }
 
 button:hover {
